--- a/Pi/public/css/padrao.css
+++ b/Pi/public/css/padrao.css
@@ -2,9 +2,12 @@ body{
     background: #000000;
     color: #fff;
 }
-.table{
-    color:#fff;
-    background: #202020;
+td {
+    color: #fff;
+}
+
+#arquivo{
+    border: 1px;
 }
 
 .form-control{
@@ -23,3 +26,43 @@ body{
     color:#BEBEBE;
 }
 
+.btn{
+    margin-left: 4px;
+    margin-top: 6px;
+    background-color: #005fff;
+    border:none;
+    cursor: pointer;
+    display:inline-block;
+    text-decoration: none;
+    border: none;
+    box-shadow:0.2vw 0.4vh 0 #00264d;
+}
+.btn:hover{
+    border: none;
+    background: #00264d;
+    box-shadow:0.3vw 0.5vh 0 #000d1a;
+}
+.btn:active{
+    border: none;
+    background: #00264d;
+    position:relative;
+    top: 3px;
+    left: 3px;
+    box-shadow:none;
+}
+
+.dropdown-menu{
+    background-color: #101010;
+}
+
+.dropdown-item{
+    color: #fff;
+}
+.dropdown-item:hover{
+    background-color: #383838;
+    color: #fff;
+}
+
+#titulo{
+    color: #fff;
+}
